--- a/BicycleTelemetry/app/src/main/res/values/strings.xml
+++ b/BicycleTelemetry/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="connect">Connect</string>
     <string name="steering_angle_title">Steering angle:</string>
     <string name="connection_status_not_connected">Not connected</string>
+    <string name="reset_straight">Calibrate straight</string>
 </resources>
