--- a/BicycleTelemetry/app/src/main/res/values/strings.xml
+++ b/BicycleTelemetry/app/src/main/res/values/strings.xml
@@ -1,9 +1,12 @@
 <resources>
     <string name="app_name">Bicycle Telemetry</string>
     <string name="server_address">Server address</string>
+    <string name="set_default_server">Set default server address</string>
     <string name="connect">Connect</string>
     <string name="steering_angle_title">Steering angle:</string>
     <string name="connection_status_not_connected">Not connected</string>
     <string name="reset_straight">Calibrate straight</string>
     <string name="server_address_default">tcp://131.234.121.241:15007</string>
+    <string name="sharedprefs_id">org.ccs_labs.bicycletelemetry.settings</string>
+    <string name="sharedprefs_key_server_address">server_address</string>
 </resources>
