Add checkboxes for enabling/disabling the gyroscope or transmitting debug data

--- a/BicycleTelemetry/app/src/main/res/values/strings.xml
+++ b/BicycleTelemetry/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="connection_status_not_connected">Not connected</string>
     <string name="reset_straight">Calibrate straight</string>
     <string name="server_address_default">131.234.121.241:15007</string>
-    <string name="low_pass_cutoff_default">2.0</string>
+    <string name="low_pass_cutoff_default">0.0</string>
     <string name="sharedprefs_id">org.ccs_labs.bicycletelemetry.settings</string>
     <string name="sharedprefs_key_server_address">server_address</string>
     <string name="sharedpref_key_low_pass_cutoff">low_pass_cutoff</string>
@@ -25,4 +25,6 @@
     <string name="current_steering_angle_format">%.1f°</string>
     <string name="tvLowPassOffsetLabel">Low-pass filter cutoff frequency (in Hz, 0 → disabled):</string>
     <string name="set_default_low_pass_cutoff">Set default low-pass filter cutoff frequency</string>
+    <string name="cbGyro">Also use gyroscope</string>
+    <string name="cbTransmitDebug">Transmit debug data</string>
 </resources>
